--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "SGM-Chrome-Extension-Steam-API-Backend",
-  "version": "0.0.1",
+  "version": "0.1.1",
   "engines": {
-    "node": "6.0.0"
+    "node": "^8.11.1"
   },
   "description": "",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "node server.js",
     "lint": "./node_modules/.bin/eslint .",
@@ -13,15 +13,15 @@
   },
   "author": "Caleb Blankemeyer <caleb@blankemeyer.us>",
   "dependencies": {
-    "express": "^4.14.0",
-    "winston": "^2.2.0",
-    "body-parser": "^1.16.0",
-    "sqlite3": "^3.1.8",
-    "steam-web": "^0.4.0"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3",
+    "sqlite": "^2.9.1",
+    "steamapi": "^2.0.2",
+    "winston": "^2.4.2"
   },
   "devDependencies": {
-    "eslint": "^3.2.0",
-    "eslint-config-airbnb-base": "^5.0.1",
-    "eslint-plugin-import": "^1.12.0"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0"
   }
 }
