--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "node-cache": "^4.2.0",
     "sqlite": "^2.9.1",
     "steamapi": "^2.0.2",
     "winston": "^2.4.2"
